--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ border-radius: 50%;
                       <source src="assets/videos/video02.mp4" type="video/mp4">
                   </video>
                 </div>
-                <a class="btn btn-success btn-xl" style="border-radius:2rem" href="#about"><span class="actionbutton">Quero viver de Internet</span></a>
+                <a class="btn btn-success btn-xl" style="border-radius:2rem" href="https://pay.hotmart.com/C91625973O"><span class="actionbutton">Quero viver de Internet</span></a>
             </div>
         </header>
 
