--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ border-radius: 50%;
                         <img id="alex" src="assets/img/alexvaz.jpg" />
                     </div>
                     <div class="col-md-8 col-xs-12">
-                        <p class="lead mt-5 mb-5 text-justify"><span class="bold">Alex Vaz</span> é especialista em Marketing Digital com uma vasta experiência em Negócios Online. Com formação em Direito e influenciado por sua vivência nos EUA, ele adquiriu um conhecimento profundo em Marketing Digital. Desde 2001, ele tem sido um Empreendedor ativo na Internet, desenvolvendo websites e softwares utilizados por muitas famosos da TV: Artistas, Músicos, Apresentadores...<br /><br />Agora, ele está compartilhando seu conhecimento e experiência com você.</p>
+                        <p class="lead mt-5 mb-5 text-justify"><span class="bold">Alex Vaz</span> é especialista em Marketing Digital com uma vasta experiência em Negócios Online. Com formação em Direito e influenciado por sua vivência nos EUA, ele adquiriu um conhecimento profundo em Marketing Digital. Desde 2001, ele tem sido um Empreendedor ativo na Internet, desenvolvendo websites e softwares utilizados por muitos famosos da TV: Artistas, Músicos, Apresentadores...<br /><br />Agora, ele está compartilhando seu conhecimento e experiência com você.</p>
                     </div>
                 </div>
                 <a class="btn btn-success btn-xl mt-5" style="border-radius:2rem" href="#about"><span class="actionbutton">Quero viver de Internet</span></a>
